# uklon_test

./: .gitignore  README.md  docker-compose.yaml
driver_app/: Dockerfile  README.md  pyproject.toml  tox.ini
driver_app/migrations/versions/: 4ca87a694fb6_initial_migration.py
driver_app/src/: __init__.py  logger.py  prometheus_metrics.py  settings.json  settings.py
driver_app/src/api/: driver_geo.py  health.py  restx.py
driver_app/src/models/: __init__.py  geo_records.py
generator/: Dockerfile  Makefile  README.md  pyproject.toml  tox.ini
generator/src/: __init__.py  settings.json  settings.py
